# Arduino-Servo-hand-emulator

./: CMakeLists.txt
common_data/: CMakeLists.txt
common_data/include/: common_data.h
flex_hand/: CMakeLists.txt
flex_hand/src/: main.cpp
servo_hand/: CMakeLists.txt
servo_hand/src/: main.cpp
